<resources>
    <string name="app_name">Lab Assistant</string>
    <string name="header">Lab Assistant</string>
    <string name="username">Username</string>
    <string name="password_prompt">Password</string>
    <string name="log_in">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_id_number_manually">Click here to enter ID number manually</string>
    <string name="id_number">ID Number</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="scan_id">Scan ID</string>
    <string name="or">OR</string>
    <string name="login_transition_name">loginView</string>
    <string name="lab">Lab:</string>
    <string name="grade">Grade:</string>
    <string name="save">Save</string>
    <string name="view_grades">View Grades</string>
    <string name="log_out">Log out</string>

    <string-array name="lab_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="grade_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="course_array">
        <item>COMP1126</item>
        <item>COMP1127</item>
        <item>COMP1161</item>
    </string-array>
    <!-- Error Strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="save_offline">Save Offline</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="registration_number">Registration Number</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="title_activity_new_grade">NewGradeActivity</string>
    <string name="course">Course</string>
    <string name="confirm">Confirm</string>
    <string name="data_unavailable">No Data Available</string>
</resources>

